--- a/Turistearg/src/main/resources/templates/index.html
+++ b/Turistearg/src/main/resources/templates/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../static/css/styles.css">
   <title>TuristeArg</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #8991CF;">
     <div class="container">
-      <img class="logo" src="logo.png">
+      <img class="logo" src="../static/img/logo.png">
     </div>
     <div class="col clearfix">
       <ul class="navbar-nav ml-auto" id="links">
@@ -38,22 +38,22 @@
     </div>
     <div class="contenedor">
       <div class="cont-img">
-        <a href="/lugar"><img class="destino" src="ROSARIO.png" alt=""></a>
+        <a href="/lugar"><img class="destino" src="../static/img/ROSARIO.png" alt=""></a>
       </div>
       <div class="cont-img">
-        <a href="/lugar"><img class="destino" src="CPAZ.png" alt=""></a>
+        <a href="/lugar"><img class="destino" src="../static/img/CPAZ.png" alt=""></a>
       </div>
       <div class="cont-img">
-        <a href="/lugar"><img class="destino" src="SAN RAFAEL.png" alt=""></a>
+        <a href="/lugar"><img class="destino" src="../static/img/SAN RAFAEL.png" alt=""></a>
       </div>
       <div class="cont-img">
-        <a href="/lugar"><img class="destino" src="SALTA.png" alt=""></a>
+        <a href="/lugar"><img class="destino" src="../static/img/SALTA.png" alt=""></a>
       </div>
       <div class="cont-img">
-        <a href="/lugar"><img class="destino" src="IGUAZU.png" alt=""></a>
+        <a href="/lugar"><img class="destino" src="../static/img/IGUAZU.png" alt=""></a>
       </div>
       <div class="cont-img">
-        <a href="/lugar"><img class="destino" src="BARILOCHE.png" alt=""></a>
+        <a href="/lugar"><img class="destino" src="../static/img/BARILOCHE.png" alt=""></a>
       </div>
 
     </div>
