Modificación de clase
Cambio clase recupass por login

--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
             <img class="logo2" src="../static/img/4d2973eb-2f35-46fb-8ca3-c92d0f05be94.jpg"> 
         </div>
         <br>
-        <div class="recupass text-center">
+        <div class="login text-center">
             <h5>Ingresar</h5>
             <br>
           </div>
