--- a/Turistearg/src/main/resources/templates/index.html
+++ b/Turistearg/src/main/resources/templates/index.html
@@ -12,25 +12,21 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #8991CF;">
-    <div class="container">
-      <img class="logo" src="../static/img/logo.png">
+  <section id="home" class="d-flex align-items-center position-relative vh-100 cover hero" style="background-image:url(../static/img/cabecera.jpg);">
+    <div class="container-fluid container-fluid-max">
+      <div class="row">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <h1 class="text-white">TuristeArg</h1>
+          <h5 class="text-white">Experiencias turísticas contadas por viajeros en primera persona</h5>
+          <div class="mt-3">
+            <a class="btn btn-outline-light" href="/lugar" role="button">Conocer Experiencias</a>
+            <a class="btn btn-outline-light" href="/login" role="button">Compartir Experiencias</a>
+          </div> 
+        </div>
+      </div>
     </div>
-    <div class="col clearfix">
-      <ul class="navbar-nav ml-auto" id="links">
-        <li class="nav-item">
-          <button type ="button" class="btn btn-outline-light float-left" href="/lugar">Conocer Experiencias</button>
-        </li>
-        <li class="nav-item">
-          <button type ="button" class="btn btn-outline-light float-right" href="/login">Compartir Experiencias</button>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container">
-    <div class="container" style="margin:2%">
-      <h3>En TuristeArg encontraras todo tipo de experiencias turísticas, contadas por viajeros en primera persona</h3>
-    </div>
+  </section>
+  <div class="container-fluid">
     <br>
     <div class="detinos text-center">
       <h5>DESTINOS TURISTICOS</h5>
@@ -58,6 +54,7 @@
 
     </div>
   </div>
+  <br>
 
   <div class="">
     <footer class="text-center">
