--- a/Turistearg/src/main/resources/static/css/styles.css
+++ b/Turistearg/src/main/resources/static/css/styles.css
@@ -1,16 +1,16 @@
 
-.logo{
-    width: 60px; height: 60px;
-}
 .btn-group{
     display: flex;
     flex-direction: row-reverse;
     width: 25%;
 }
-.btn-primary{
-    background-color: #ede4ed;
-    color: black;
-}
+section{
+    display: flex;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}  
+
 #gral{
     margin: 3%;
 }
