--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -7,24 +7,24 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-      <link rel="stylesheet" href="../static/css/recupass.css">
+      <link rel="stylesheet" href="css/recupass.css">
       <title>TuristeArg</title>
     </head>
     
     <body>
       <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #8991CF;">
         <div class="container">
-            <img class="logo" src="../static/img/4d2973eb-2f35-46fb-8ca3-c92d0f05be94.jpg">
+            <img class="logo" src="img/logo.jpg">
         </div>
         <div class="col clearfix">
           <ul class="navbar-nav ml-auto" id="links">
-              <a href="/login"><img class="login" src="../static/img/login.png"></a>  
+              <a href="/login"><img class="login" src="img/login.png"></a>  
           </ul>
         </div>
       </nav>
       <div class="contenedor">
         <div class="container text-center">
-            <img class="logo2" src="../static/img/4d2973eb-2f35-46fb-8ca3-c92d0f05be94.jpg"> 
+            <img class="logo2" src="img/logo.jpg"> 
         </div>
         <br>
         <div class="login text-center">
