--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     </head>
     
     <body>
-      <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #8991CF;">
+      <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #291c55;">
         <div class="container">
             <img class="logo" src="../static/img/4d2973eb-2f35-46fb-8ca3-c92d0f05be94.jpg">
         </div>
@@ -52,7 +52,7 @@
       </div>
       <br>
       <div class="">
-        <footer class="text-center" style="background-color: #8991CF;">
+        <footer class="text-center" style="background-color: #291c55;">
           <div class="row">
             <div class="mx-auto">
               <p>©Copyright Todos los derechos reservados</p>
