Reemplazo de la navbar

--- a/Turistearg/src/main/resources/templates/index2.html
+++ b/Turistearg/src/main/resources/templates/index2.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<div th:replace="navbar :: navbar-index"></div>
+	<div th:replace="fragmentos/navbar :: navbar-index"></div>
 	<main>
 		<div class="imagen-principal">
 			<div class="contenedor">
