--- a/Turistearg/src/main/resources/templates/fragmentos/navbar.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/navbar.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
 <body>
-    <nav th:fragment="nav" class="navbar navbar-expand-md navbar-dark" style="background-color: #8991CF;">
-        <div class="container">
-            <img class="logo" src="img/logo.jpg">
-        </div>
-        <div class="col clearfix">
-          <ul class="navbar-nav ml-auto" id="links">
-              <a href="/login"><img class="login" src="img/login.png"></a>  
-          </ul>
-        </div>
-      </nav>
+	<header th:fragment="navbar-index">
+		<div class="contenedor-nav">
+			<span class="logotipo">TURISTEARG</span>
+			<nav>
+				<a class="activo" href="/">INICIO</a>
+				<a href="/registro">REGISTRATE</a>
+				<a href="/login">LOGIN</a>
+			</nav>
+		</div>
+	</header>
+	<header th:fragment="navbar-registro">
+		<div class="contenedor-nav">
+			<span class="logotipo">TURISTEARG</span>
+			<nav>
+				<a href="/">INICIO</a>
+				<a class="activo" href="/registro">REGISTRATE</a>
+				<a href="/login">LOGIN</a>
+			</nav>
+		</div>
+	</header>
 </body>
+
 </html>
