--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -1,76 +1,55 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Validación de Formulario con Javascript</title>
+	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shalimar&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/login.css">
+	<link rel="stylesheet" href="css/navbar.css">
 
-    <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/recupass.css">
-      <title>TuristeArg</title>
-    </head>
-    
-    <body>
-      <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #8991CF;">
-        <div class="container">
-            <img class="logo" src="img/logo.jpg">
-        </div>
-        <div class="col clearfix">
-          <ul class="navbar-nav ml-auto" id="links">
-              <a href="/login"><img class="login" src="img/login.png"></a>  
-          </ul>
-        </div>
-      </nav>
-      <div class="contenedor">
-        <div class="container text-center">
-            <img class="logo2" src="img/logo.jpg"> 
-        </div>
-        <br>
-        <div class="login text-center">
-            <h5>Ingresar</h5>
-            <br>
-          </div>
-          <div class="form text-center">
-            <form action="logincheck" method="POST">
-                 <p th:if="${error != null}" th:text="${error}" style="color:red"></p>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Correo Electronico </label>
-                  <input  type="email" name="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1 text-center" class="form-label">Contraseña</label>
-                  <input type="password" name="password" class="form-control" id="exampleInputPassword1" >
+</head>
 
-                  <li class="nav-item">
-                    <button type ="button" class="btn btn-outline-float-right" href="/login">Olvidaste tu contraseña?</button>
-                  </li>
-                </div> 
-                <button type="submit" class="btn btn-primary">Ingresar</button>
-              </form>
-          </div>
-      </div>
-      <br>
-      <div class="">
-        <footer class="text-center" style="background-color: #8991CF;">
-          <div class="row">
-            <div class="mx-auto">
-              <p>©Copyright Todos los derechos reservados</p>
-    
-            </div>
-          </div>
-        </footer>
-    
-      </div>
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-    </body>
-    
-    </html>
+<body>
+	<div th:replace="navbar :: navbar-registro"></div>
+	<main>
+		<form action="" class="formulario" id="formulario">
+                    			<!-- Grupo: Correo Electronico -->
+			<div class="formulario__grupo" id="grupo__correo">
+				<label for="correo" class="formulario__label">Correo Electrónico</label>
+				<div class="formulario__grupo-input">
+					<input type="email" class="formulario__input" name="correo" id="correo"
+						placeholder="correo@correo.com">
+				</div>
+			</div>
+
+			<!-- Grupo: Contraseña -->
+			<div class="formulario__grupo" id="grupo__password">
+				<label for="password" class="formulario__label">Contraseña</label>
+				<div class="formulario__grupo-input">
+					<input type="password" class="formulario__input" name="password" id="password"
+						placeholder="Contraseña">
+				</div>
+			</div>
+                        
+                        <div class="olvidopass" id="olvido__password">
+                            <p>Olvide mi contraseña</p>
+                            
+                        </div>
+                        
+                        <button type="submit" class="formulario__btn">Registrarte</button>
+                        <button type="submit" class="formulario__btn-enviar">INGRESAR</button>
+
+		</form>
+	</main>
+
+	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
