--- a/Turistearg/src/main/resources/templates/fragmentos/footer.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/footer.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TuristeARG</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/styles.css">
-
-</head>
+<html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <body>
-    <footer class="container">
+    <footer th:fragment="footer">
+
         <div class="menu-footer">
             <a href="#">Sobre nosotros</a>
             <a href="#">Contactanos</a>
         </div>
 
-        <div class="redes-sociales">
-            <img src="" alt="Facebook">
-            <img src="" alt="Instagram">
-            <img src="" alt="Whatsapp">
+        <div class="footer-redes-sociales">
+            <img src="/Turistearg/src/main/resources/static/img/icons8-instagram.svg" alt="Instagram">
+            <img src="/Turistearg/src/main/resources/static/img/icons8-facebook-circled.svg" alt="Facebook">
+            <img src="/Turistearg/src/main/resources/static/img/icons8-whatsapp.svg" alt="Whatsapp">
         </div>
 
-        <div class="">
+        <div class="permisos">
             <p> ©Copyright todos los derechos reservados</p>
         </div>
     </footer>
