agregado de css a footer
- agregado de ccs
- union de timelieaf
- agregado del footer al index

--- a/Turistearg/src/main/resources/templates/fragmentos/footer.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/footer.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" href="css/footer.css">
+
 <body>
     <footer th:fragment="footer">
 
@@ -19,4 +21,5 @@
         </div>
     </footer>
 </body>
+
 </html>
