Navbar funcional con las sesiones
Correciones a controlador de usuario
Creacion de los archivos publicaciones y sus estilos
Detalles varios

--- a/Turistearg/src/main/resources/templates/index2.html
+++ b/Turistearg/src/main/resources/templates/index2.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<div th:replace="fragmentos/navbar :: navbar-index"></div>
+	<div th:if="${}"th:replace="fragmentos/navbar :: navbar-general"></div>
 	<main>
 		<div class="imagen-principal">
 			<div class="contenedor">
