--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<div th:replace="fragmentos/navbar :: navbar-registro"></div>
+	<div th:replace="fragmentos/navbar :: navbar-general"></div>
 	<main>
 		<form action="/logincheck" method="POST" class="formulario" id="formulario">
 			<!-- Grupo: Correo Electronico -->
