--- a/Turistearg/src/main/resources/templates/fragmentos/navbar.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/navbar.html
@@ -2,23 +2,14 @@
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <body>
-	<header th:fragment="navbar-index">
-		<div class="contenedor-nav">
-			<span class="logotipo">TURISTEARG</span>
-			<nav>
-				<a class="activo" href="/">INICIO</a>
-				<a href="/registro">REGISTRATE</a>
-				<a href="/login">LOGIN</a>
-			</nav>
-		</div>
-	</header>
-	<header th:fragment="navbar-registro">
+	<header th:fragment="navbar-general">
 		<div class="contenedor-nav">
 			<span class="logotipo">TURISTEARG</span>
 			<nav>
 				<a href="/">INICIO</a>
-				<a class="activo" href="/registro">REGISTRATE</a>
-				<a href="/login">LOGIN</a>
+				<a th:if="${session.usuariosession == null}" href="/registro">REGISTRATE</a>
+				<a th:if="${session.usuariosession == null}" href="/login">LOGIN</a>
+				<a th:if="${session.usuariosession != null}" th:href="@{/usuario/perfil(id=__${session.usuariosession.id}__)}">PERFIL</a>
 			</nav>
 		</div>
 	</header>
