--- a/Turistearg/src/main/resources/templates/perfil.html
+++ b/Turistearg/src/main/resources/templates/perfil.html
@@ -12,22 +12,37 @@
 		integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shalimar&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/registro.css">
 	<link rel="stylesheet" href="css/navbar.css">
+	<link rel="stylesheet" href="css/tweet.css">
+	<link rel="stylesheet" href="css/publicaciones.css">
+
 
 </head>
+
 <body>
-    <div th:replace="fragmentos/navbar :: navbar-registro"></div>
-    <main>
-        
-        <div class="fotoPerfil">
-            <img src="" alt="">
-        </div>
+	<div th:replace="fragmentos/navbar :: navbar-general"></div>
+	<main>
+		<section>
+			<div class="tweet" th:each="publicacion : ${publicaciones}">
+				<img class="tweet__author-logo" th:src="${'/foto/usuario/' + publicacion.usuario.id}">
+				<div class="tweet__main">
+					<div class="tweet__header">
+						<div class="tweet__author-name" th:text="${publicacion.usuario.nombreDeUsuario}">
+						</div>
+					</div>
+				</div>
+				<div class="tweet__content">
+					<p th:text="${publicacion.descripcion}"></p>
+					<div>
+						<img class="tweet__image" th:src="${'/foto/publicacion/' + publicacion.id}"
+							alt="foto publicacion">
+					</div>
+				</div>
+			</div>
+			</div>
+		</section>
 
-        <section>
-            <div th:each=${}></div>
-        </section>
-
-    </main>
+	</main>
 </body>
+
 </html>
