--- a/Turistearg/src/main/resources/templates/fragmentos/footer.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/footer.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="/Turistearg/src/main/resources/static/css/footer.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/Turistearg/src/main/resources/static/css/footer.css">
 
-<body>
-    <footer th:fragment="footer contenedor">
-        <div class="footer-contenedor">
-
-            <div class="menu-footer">
-                <a href="#">Sobre nosotros</a>
-                <br>
-                <a href="#">Contactanos</a>
+<!-- Site footer -->
+<!-- thymeleaf -->
+<footer th:fragment="footer contenedor">
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h6>Acerca</h6>
+                <p class="text-justify">Con Turistearg.com <i>NUNCA FUE TAN SIMPLE CONOCER ARGENTINA </i> Lorem
+                    ipsum
+                    dolor sit amet consectetur adipisicing elit. Quam vero molestiae architecto. Molestias hic
+                    corporis
+                    architecto illum molestiae est quibusdam temporibus necessitatibus debitis ipsum! Dolore esse
+                    vel
+                    fuga delectus voluptatum.
+                </p>
             </div>
 
-            <div class="footer-redes-sociales">
-                <a title="Turistearg" href="http://www.instagram.com/turistearg"><img
-                        src="/Turistearg/src/main/resources/static/img/icons8-instagram.svg"
-                        alt="Instagram-turistearg"></a>
-                <a href="http://www.facebook.com/turistearg"><img
-                        src="/Turistearg/src/main/resources/static/img/icons8-facebook-circled.svg"
-                        alt="Facebook-turistearg"></a>
-                <a href="#"><img src="/Turistearg/src/main/resources/static/img/icons8-whatsapp.svg"> </a>
+            <div class="col-xs-6 col-md-3">
+                <h6>Categorias</h6>
+                <ul class="footer-links">
+                    <li><a href="#">Rosario</a></li>
+                    <li><a href="#">Carlos Paz</a></li>
+                    <li><a href="#">San Rafael</a></li>
+                    <li><a href="#">Salta</a></li>
+                    <li><a href="#">Iguazu</a></li>
+                    <li><a href="#">Bariloche</a></li>
+                </ul>
             </div>
 
-            <div class="copy">
-                <p> ©Copyright todos los derechos reservados</p>
+            <div class="col-xs-6 col-md-3">
+                <h6>Nosotros</h6>
+                <ul class="footer-links">
+                    <li><a href="#">Sobre Nosotros</a></li>
+                    <li><a href="#">Contactanos</a></li>
+                    <li><a href="#">Registrate</a></li>
+                    <li><a href="http://scanfcode.com/privacy-policy/">Politica de Privacidad</a></li>
+                </ul>
             </div>
         </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text">Copyright &copy; 2021 Todos los derechos reservados
+                    <a href="#">Inicio</a>
+                </p>
+            </div>
 
-    </footer>
-</body>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="#"><i class="bi bi-facebook"></i></a></li>
+                    <li><a class="instagram" href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li><a class="twitter" href="#"><i class="bi bi-twitter"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html>
