Arreglos para poder crear perfil
-Creamos vistas para completar pasos previos al perfil
- Faltan pulir cosas pero andan las publicaciones, categorias y lugares.
-ARREGLAR VISTAS CATEGORIAS Y

--- a/Turistearg/src/main/resources/templates/index2.html
+++ b/Turistearg/src/main/resources/templates/index2.html
@@ -48,22 +48,22 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="img/BARILOCHE.png" class="d-block w-50" alt="...">
+						<a th:href="@{/categorias(idLugar='1')}" ><img th:src="${'/foto/lugar/1'}" class="d-block w-50"></a>
 					</div>
 					<div class="carousel-item">
-						<img src="img/CPAZ.png" class="d-block w-50" alt="...">
+						<img th:src="${'/foto/lugar/2'}" class="d-block w-50" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="img/ROSARIO.png" class="d-block w-50" alt="...">
+						<img th:src="${'/foto/lugar/3'}" class="d-block w-50" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="img/SALTA.png" class="d-block w-50" alt="...">
+						<img th:src="${'/foto/lugar/4'}" class="d-block w-50" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="img/SANRAFAEL.png" class="d-block w-50" alt="...">
+						<img th:src="${'/foto/lugar/5'}" class="d-block w-50" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="img/IGUAZU.png" class="d-block w-50" alt="...">
+						<img th:src="${'/foto/lugar/6'}" class="d-block w-50" alt="...">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
