--- a/Turistearg/src/main/resources/static/css/login.css
+++ b/Turistearg/src/main/resources/static/css/login.css
@@ -112,14 +112,30 @@ main {
 .formulario__btn:hover {
     box-shadow: 3px 0 30px rgba(163, 163, 163, 1);
 }
-
-.olvidopass {
-  color:#000000;
-  text-decoration:underline;
-  cursor:pointer;
-  margin-top: 2%;
+.recupass_link{
+	 cursor:pointer;
+  	margin-top: 2%;
 }
-
+.recupass_link a{
+  color:#000000;
+  text-decoration:none;
+  cursor:pointer;
+ 
+}
+.recupass_link a:hover{
+  color:#4055B2;
+  text-decoration:none;
+  cursor:pointer;
+ 
+}
+.botones_form{
+	display:flex;
+	flex-direction: column;
+}
+.botones_form button{
+	margin: auto;
+	margin-bottom: 15px;
+}
 /* ----- -----  Mediaqueries ----- ----- */
 @media screen and(max-width: 800px) {
     .formulario {
