--- a/Turistearg/src/main/resources/templates/index.html
+++ b/Turistearg/src/main/resources/templates/index.html
@@ -29,40 +29,16 @@
 			<div class="contenedor-titulo">
 				<h3 id="lugares">Destinos turisticos</h3>
 			</div>
-
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-						class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-						aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-						aria-label="Slide 3"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-						aria-label="Slide 4"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-						aria-label="Slide 5"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-						aria-label="Slide 6"></button>
+					<button type="button" th:each="lugar, iterStat : ${lugares}" data-bs-target="#carouselExampleIndicators" 
+					 th:data-bs-slide-to="${iterStat.index}" th:class="${iterStat.first}? 'active'" aria-current="true"></button>
 				</div>
 				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<a th:href="@{/categorias(idLugar='1')}" ><img th:src="${'/foto/lugar/1'}" class="d-block w-50"></a>
-					</div>
-					<div class="carousel-item">
-						<img th:src="${'/foto/lugar/2'}" class="d-block w-50" alt="...">
-					</div>
-					<div class="carousel-item">
-						<img th:src="${'/foto/lugar/3'}" class="d-block w-50" alt="...">
-					</div>
-					<div class="carousel-item">
-						<img th:src="${'/foto/lugar/4'}" class="d-block w-50" alt="...">
-					</div>
-					<div class="carousel-item">
-						<img th:src="${'/foto/lugar/5'}" class="d-block w-50" alt="...">
-					</div>
-					<div class="carousel-item">
-						<img th:src="${'/foto/lugar/6'}" class="d-block w-50" alt="...">
+					<div class="carousel-item" th:each="lugar, iterStat : ${lugares}" th:classappend="${iterStat.first}? 'active'">
+						<a th:href="@{/categorias(idLugar=${lugar.id})}">
+							<img th:src="@{'data:image/jpeg;base64,'+${lugar.foto.getContenidoBase64()}}" class="d-block w-50">
+						</a>
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
