Limpieza token + otros
* implementación de limpieza de token finalizada
* se agregó validacion de email único al registrarse
* se movieron endpoints de usuario que estaban en MainController a UsuarioController
* se creó una vista básica de error
* se creó un base controller, cualquier controller podrá heredar de este
* se corrigió la url base del link que se envía por email para reiniciar contraseña
* se mejoró un poco el manejo de errores y el logueo en consola

--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -44,7 +44,7 @@
 			</div>
 
 			<div class="recupass_link">
-				<a href="/recuperar-contraseña">Olvide mi contraseña</a>
+				<a href="/usuario/recuperar-contraseña">Olvide mi contraseña</a>
 			</div>
 			
 			<div class="botones_form">
