--- a/Turistearg/src/main/resources/templates/resetPassword.html
+++ b/Turistearg/src/main/resources/templates/resetPassword.html
@@ -12,8 +12,8 @@
 		integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shalimar&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/registro.css">
-	<link rel="stylesheet" href="css/navbar.css">
+	<link rel="stylesheet" th:href="@{/css/navbar.css}">
+	<link rel="stylesheet" th:href="@{/css/registro.css}">
 
 </head>
 
@@ -22,7 +22,8 @@
 	<main>
 		<!-- parrafo si hay un error en el login-->
 		<p th:if="${error != null}" th:text="${error}" style="color:red"></p>
-		<form method="POST" action="/cambio_contraseña" class="formulario" id="formulario">
+		<form method="POST" action="/usuario/cambio_contraseña" class="formulario" id="formulario">
+			<input type="hidden" name="tokenDeConfirmacion" th:value="${tokenDeConfirmacion}"></input>
 			<!-- Grupo: Correo Electronico -->
 			<div class="formulario__grupo" id="grupo__correo">
 				<label for="correo" class="formulario__label">Correo Electrónico</label>
