--- a/Turistearg/src/main/resources/templates/recupass.html
+++ b/Turistearg/src/main/resources/templates/recupass.html
@@ -11,8 +11,8 @@
 		integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shalimar&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/navbar.css">
-	<link rel="stylesheet" href="css/recupass.css">
+	<link rel="stylesheet" th:href="@{/css/navbar.css}">
+	<link rel="stylesheet" th:href="@{/css/recupass.css}">
   <title>Recuperar Contraseña</title>
 </head>
 
@@ -24,7 +24,7 @@
 				<h2>RECUPERAR CONTRASEÑA</h2>
 			</div>
 		</section>
-		<form action="/recuperar-contraseña" method="POST" class="formulario" id="formulario">
+		<form action="/usuario/recuperar-contraseña" method="POST" class="formulario" id="formulario">
 			
 			<!-- Grupo: Correo Electronico -->
 			<div class="formulario__grupo" id="grupo__correo">
