Cambios en vistas de categoria y cosas varias
*Modificaciones en categoria para intentar subir una publicacion desde la vista de las publicaciones de la categoria
*Borrado de algunos imports innecesarios
*Colocacion del link en el la vista publicaciones para crear la publicacion de la categoria

--- a/Turistearg/src/main/resources/static/css/index2.css
+++ b/Turistearg/src/main/resources/static/css/index2.css
@@ -17,7 +17,7 @@ body {
 	margin: auto;
 }
 
-/* ---- ----- ----- Pelicula Principal ----- ----- ----- */
+/* ---- ----- ----- Imagen Principal ----- ----- ----- */
 .imagen-principal {
 	font-size: 16px;
 	min-height: 40.62em;
