Arreglo de publicar desde Categoria
*Se arreglo y se agrego el metodo para publicar desde una categoria especifica
*Se borro de usuario servicio lineas obsoletas
*Se acomodaron las publicaciones en orden descendete desde la mas nueva a la mas vieja
*Se aumento el tamaño permitido de la imagenes en las querys

--- a/Turistearg/src/main/resources/templates/categorias.html
+++ b/Turistearg/src/main/resources/templates/categorias.html
@@ -28,7 +28,7 @@
             <div class="grilla-categorias">
                 <div th:each="categoria: ${categorias}">
                     <p th:text="${categoria.nombre}"></p>
-                    <a th:href="@{/publicacion/publicaciones(id=__${categoria.id}__)}"><img src="/img/ROSARIO.png" alt=""></a>
+                    <a th:href="@{/publicacion/publicaciones(id=__${categoria.id}__)}"><img th:src="@{'data:image/jpeg;base64,'+${categoria.foto.getContenidoBase64()}}" alt=""></a>
                 </div>
             </div>
         </section>
