Se indexo con fragments el footer al index

--- a/Turistearg/src/main/resources/templates/fragmentos/footer.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/footer.html
@@ -7,8 +7,8 @@
 
 <!-- Site footer -->
 <!-- thymeleaf -->
-<footer th:fragment="footer contenedor">
-<footer class="site-footer">
+<body>
+<footer class="site-footer" th:fragment="footer-page">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-6">
@@ -65,5 +65,5 @@
         </div>
     </div>
 </footer>
-
+</body>
 </html>
