--- a/Turistearg/src/main/resources/templates/index2.html
+++ b/Turistearg/src/main/resources/templates/index2.html
@@ -13,6 +13,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/navbar.css">
 	<link rel="stylesheet" href="css/index2.css">
+            <link rel="stylesheet" href="css/footer.css">
 	<title>TuristeArg</title>
 </head>
 
@@ -80,7 +81,7 @@
 		</div>
 	</main>
 
-	<div th:replace="fragmentos/footer :: footer"></div>
+	<div th:replace="fragmentos/footer :: footer-page"></div>
 
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
