--- a/Turistearg/src/main/resources/templates/fragmentos/footer.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/footer.html
@@ -2,6 +2,9 @@
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    
+    
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/Turistearg/src/main/resources/static/css/footer.css">
 
@@ -57,9 +60,9 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
-                    <li><a class="facebook" href="#"><i class="bi bi-facebook"></i></a></li>
-                    <li><a class="instagram" href="#"><i class="bi bi-instagram"></i></a></li>
-                    <li><a class="twitter" href="#"><i class="bi bi-twitter"></i></a></li>
+                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
                 </ul>
             </div>
         </div>
